<resources>
    <string name="app_name">ExcelMe(BasicActivity)</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="applicationName">ExcelMe</string>
    <string name="second_fragment_label">Second page</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="calendarContentDescription">Calendar</string>
    <string name="settingsContentDescription">Settings</string>
    <string name="backContentDescription">Back</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--Sections names!-->

    <string name="first_section_name">Sport</string>
    <string name="second_section_name">Food</string>
    <string name="third_section_name">Habits</string>
    <string name="fourth_section_name">Sleep</string>

    <string name="sport_first_section">Arms</string>
    <string name="sport_second_section">Legs</string>
    <string name="sport_third_section">Abs</string>
    <string name="sport_fourth_section">Full Body</string>

    <string name="food_first_section">Breakfast</string>
    <string name="food_second_section">Lunch</string>
    <string name="food_third_section">Dinner</string>
    <string name="food_fourth_section">Snacks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_me">About me</string>
    <string name="activity_level">Activity level</string>
    <string name="your_plan">Your plan</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="your_name">Your name:</string>
    <string name="your_sex">Your sex:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="non">Non</string>
    <string name="age">Age:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="what_s_your_goal">What\'s your goal:</string>
    <string name="loss_weight">Loss Weight</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="gain_weight">Gain Weight</string>
    <string name="your_activity_level">Your activity level:</string>
    <string name="inactive">Inactive</string>
    <string name="super_active">Super Active</string>
    <string name="it_is_your_plan_preview">It is your plan preview</string>
    <string name="goal">Goal:</string>
    <string name="_1600_kcal">1600 kcal</string>
    <string name="weight_loss">weight loss</string>
    <string name="ready_to_start">Ready to start!</string>
    <string name="start">Start</string>
    <string name="daily_calories">Daily calories:</string>

    <!--Sections names end!-->
</resources>