<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@color/white">
    <ImageView
        android:id="@+id/sport_button"
        android:layout_width="84dp"
        android:layout_height="88dp"
        android:src="@drawable/ic_sport_b"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/first_section_name"/>
    <ImageView
        android:id="@+id/food_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_food_b"
        android:layout_alignParentStart="true"
        android:layout_marginStart="130dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/second_section_name"/>
    <ImageView
        android:id="@+id/habit_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_habit_b"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="120dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/third_section_name"/>
    <ImageView
        android:id="@+id/sleep_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_sleep_b"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="33dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/fourth_section_name"/>


</RelativeLayout>