<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white">
            <ImageView
                android:id="@+id/calendar"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                app:srcCompat="@drawable/icon_calendar"
                android:contentDescription="@string/calendarContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applicationName"
                android:textSize="36sp"
                android:layout_centerInParent="true"
                tools:ignore="RelativeOverlap" />
            <ImageView
                android:id="@+id/settings"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_baseline_settings_24"
                android:contentDescription="@string/settingsContentDescription"/>
</RelativeLayout>

