<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">
    <include layout="@layout/toolbartop"/>


    <TextView
        android:id="@+id/settings"
        android:layout_width="161dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/roboto"
        android:text="@string/settingsContentDescription"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/menuTabFirst"
        style="@style/menuRight"
        android:layout_width="360dp"
        android:layout_height="280dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="236dp"
        android:background="@color/white"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/about_me"
                android:layout_width="320dp"
                android:layout_height="57dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/thirdMenuIconColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/about_me"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/activity_level"
                android:layout_width="320dp"
                android:layout_height="57dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                app:cardBackgroundColor="@color/thirdMenuIconColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about_me">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/activity_level"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/your_plan"
                android:layout_width="320dp"
                android:layout_height="57dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                app:cardBackgroundColor="@color/thirdMenuIconColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_level">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="95dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/your_plan"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <include layout="@layout/toolbarbottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>